--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,4 +1,5 @@
 @use './partials/header.scss';
+@use './partials/comics.scss';
 @import '~bootstrap/scss/bootstrap';
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&family=Roboto:wght@300&display=swap');
 
@@ -10,7 +11,6 @@
 
 body {
     font-family: 'PT Sans Narrow', sans-serif;
-    background-color: black;
 }
 
 .container {
