--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,6 +1,7 @@
 @use './partials/header.scss';
-@use './partials/comics.scss';
 @use './partials/jumbotron.scss';
+@use './partials/comics.scss';
+@use './partials/comics-links.scss';
 @import '~bootstrap/scss/bootstrap';
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&family=Roboto:wght@300&display=swap');
 
