--- a/resources/scss/partials/_comics-links.scss
+++ b/resources/scss/partials/_comics-links.scss
@@ -4,6 +4,7 @@
     ul {
         list-style-type: none;
         padding: 2rem 1rem;
+        margin-bottom: 0;
         display: flex;
         align-items: center;
         justify-content: space-between;
