--- a/resources/scss/partials/_footer.scss
+++ b/resources/scss/partials/_footer.scss
@@ -37,4 +37,51 @@ footer {
             }
         }
     }
+
+    .bottom-footer {
+        background-color: #303030;
+
+        .container {
+            height: 100px;
+
+            .row {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                height: 100%;
+            }
+
+            .login {
+                font-size: 20px;
+                font-weight: 400;
+                padding: 0.5rem 1rem;
+                color: white;
+                border: 2px solid #0282F9;
+
+                &:hover,
+                &:active {
+                    background-color: #0282F9;
+                }
+            }
+
+            .social {
+                display: flex;
+
+                h2 {
+                    color: #0282F9;
+                    padding: 0 2rem;
+                    margin-bottom: 0;
+                }
+
+                ul {
+                    margin-bottom: 0;
+
+                    li {
+                        display: inline-block;
+                        padding: 0 0.5rem;
+                    }
+                }
+            }
+        }
+    }
 }
